Archive2/0e/41502addc1df1d/output
main.cpp:19:59: warning: unused parameter 'sequence' [-Wunused-parameter]
void doSomething(const std::integer_sequence<T, ints...>& sequence)
                                                          ^
main.cpp:47:37: error: template argument for template type parameter must be a type
      typedef std::integer_sequence<AppendInt, ISInts...> type;  
                                    ^~~~~~~~~
/usr/include/c++/v1/utility:671:16: note: template parameter is declared here
template<class _Tp, _Tp... _Ip>
               ^
main.cpp:58:14: warning: unused parameter 'argc' [-Wunused-parameter]
int main(int argc, char* argv[])
             ^
main.cpp:58:26: warning: unused parameter 'argv' [-Wunused-parameter]
int main(int argc, char* argv[])
                         ^
3 warnings and 1 error generated.
